# vitis_microbench

./: .gitignore  .gitmodules  Makefile  README.md  build.sh  build_u280_fixed_point.sh  build_u280_floating_point.sh  build_vck5000_fixed_point.sh  build_vck5000_floating_point.sh  compile.sh  compile_new.sh  design_vck.cfg  link.cfg  link.sh  link_algebraic.cfg  link_algebraic_u280_single.cfg  link_algebraic_vck5000.cfg  link_algebraic_vck_single.cfg  link_arithmetic_u280.cfg  link_arithmetic_u280_multi.cfg  link_arithmetic_vck5000.cfg  link_arithmetic_vck_multi.cfg  link_arithmetic_vck_single.cfg  link_new.sh  pyproject.toml  run.sh  run_u280_fixed_point.sh  run_u280_floating_point.sh  run_vck5000_fixed_point.sh  run_vck5000_floating_point.sh  setup.py
config/: design_u280.cfg  link_binary_vck_single.cfg  link_unary_u280_multi.cfg  link_unary_vck_multi.cfg  link_unary_vck_single.cfg
generate/: .generate.py.swp  algebraic.hpp  arithmetic.hpp  fixed_point_ops.csv  float_ops.csv  generate.py  generate.sh  main.py
generate/data/: float_ops_supported.csv
generate/kernel_template/: algebraic.py  arithmetic.py
run/: run_u280_fixed_point.sh  run_u280_floating_point.sh  run_vck5000_fixed_point.sh  run_vck5000_floating_point.sh
scripts/: analyse.py  average.py  get_resource_utilisation.py  plot.py  plot.sh  plot_bars_grouped_stacked.py  utilisation.py  utilisation.sh
scripts/generate/: generate.py  generate.sh
scripts/plot/: plot_profile.py
scripts/resutil/: collect_multikernel.py  collect_multikernel_test.py  collect_singlekernel.py
vitis_microbench/: README.md
(+222 files in other folders)
